--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script src="rps.js"></script>
+    
 </head>
 <body>
-    
+    <h2>Open Developer options to play press F12</h2>
 </body>
 </html>
