--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="rps.js"></script>
-    
+    <script src="rps.js" defer></script>
 </head>
 <body>
-    <h2>Open Developer options to play press F12</h2>
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
+    <div>
+        <div>
+            <div></div>
+            <div></div>
+        </div>
+        <div></div>
+        
+    </div>
 </body>
 </html>
