--- a/index.html
+++ b/index.html
@@ -5,20 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="rps.js" defer></script>
+    <!--<script src="rps.js" defer></script>-->
 </head>
 <body>
     <header>
-        <h1>Rock Paper Scissors</h1>
+        <h2>Rock Paper Scissors</h2>
     </header>
-    <div>
-        <div>
-            <div></div>
-            <div></div>
+    <div class="main">
+        <div class="sub one">
+            <div class="child one">
+                <h3>Options:</h3>
+                <button><strong>ROCK</strong></button>
+                <button><strong>PAPER</strong></button>
+                <button><strong>SCISSORS</strong></button>
+            </div>
+            
+            <div class="child two">
+                <h3>Player Score</h3>
+                <div class="scores"></div>
+                <h3>Computer Score</h3>
+                <div class="scores"></div>
+            </div>
         </div>
-        <div></div>
-        
-    </div>
+        <div class="sub two">
+            <div class="output">
+                <div class="choice"></div>
+                <h4>Player Choice</h4>
+            </div>
+            <div class="output">
+                <div class="choice"></div>
+                <h4>Computer Choice</h4>
+            </div>
+        </div>
+    </div>    
+   
+    <footer>
+       <h2>Copyright © Vanderbylt 2022</h2>
+    </footer>
 </body>
 </html>
